# syryn

./: .gitignore  README.md  pyproject.toml  requirements.txt
old/: syryn-0.1.0-py3-none-any.whl
syryn/: __main__.py  syryn.py
